--- a/index.html
+++ b/index.html
@@ -36,10 +36,32 @@
         <button onclick="changeBackground()">Hintergrund ändern</button>
       </div>
     </section>
-  </main>
+
+    <section>
+      <h3>Inhalt löschen</h3>
+      <div class="content">  
+    <h3>Der Inhalt des Buttons wird auf Knopfdruck gelöscht.</h3>
+    <div class="content">
+      <p id="to-delete"></p>
+    </div>
+    <div class="center">
+      <button onclick="deleteText()">to-delete</button>
+    </div>
+  
 
 
-  <script type="module" src="tests/run.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
