--- a/index.html
+++ b/index.html
@@ -78,6 +78,26 @@
       </div>
     </section>
   
+
+    <section>
+      <h3>Counter reset</h3>
+      <div class="content">
+        Mann kann den Counter reseten.
+      </div>
+      <div class="center">
+        <button onclick="resetCounter()">Counter reset.</button>
+      </div>
+    </section>
+    
+    <section>
+      <h3>In und Out Put</h3>
+      <div class="content">
+        Mann hat einen Input und einen Output..
+      </div>
+      <div class="center">
+        <button onclick="writeText()">In udn Output</button>
+      </div>
+    </section>
     
   
   
